force-app/main/default/objects/AccountTeamMember__c/AccountTeamMember__c.object-meta.xml
<CustomObject>
    <label>Account Team Member</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>AccountTeamMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>