force-app/main/default/objects/AccountTeamMember__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Members</relationshipLabel>
    <relationshipName>AccountTeamMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>