force-app/main/default/objects/AccountTeamMember__c/fields/AccountTeamMemberId__c.field-meta.xml
<CustomField>
    <fullName>AccountTeamMemberId__c</fullName>
    <label>AccountTeamMemberId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>