force-app/main/default/objects/AccountTeamMember__c/fields/FS_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Alternate_Phone__c</fullName>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>