force-app/main/default/objects/AccountTeamMember__c/fields/FS_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Email__c</fullName>
    <description>Email Field</description>
    <label>Team Member Email</label>
    <type>Email</type>
</CustomField>