force-app/main/default/objects/AccountTeamMember__c/fields/FS_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Phone__c</fullName>
    <description>phone field</description>
    <label>Team Member Phone</label>
    <type>Phone</type>
</CustomField>