force-app/main/default/objects/AccountTeamMember__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>&#39;&#39; + UserId__c + &#39;~&#39; + TEXT(TeamMemberRole__c) + &#39;~&#39; + AccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>