force-app/main/default/objects/AccountTeamMember__c/fields/Key_Copy__c.field-meta.xml
<CustomField>
    <fullName>Key_Copy__c</fullName>
    <description>copy the formula field for indexing</description>
    <label>Key Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>