force-app/main/default/objects/AccountTeamMember__c/fields/TeamMemberRole__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberRole__c</fullName>
    <label>Team Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>COM Backup</fullName>
            </value>
            <value>
                <fullName>JCOM</fullName>
            </value>
            <value>
                <fullName>Sales Team Member</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>PIC</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>FDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>