force-app/main/default/objects/AccountTeamMember__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountTeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>